[tool.poetry]
name = "lucypher"
version = "0.1.0"
description = ""
authors = ["André Carvalho <alac1984@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Kivy = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
pylint = "^2.14.1"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
